Tweaked header area to stop text flowing out of view - added shortURL

--- a/src/css/modules/_headerArea.scss
+++ b/src/css/modules/_headerArea.scss
@@ -74,12 +74,15 @@
 
 	h2{
 		
-		width:320px; 
+		width:280px; 
 		color:white; 
-		font-size:1em; 
+		font-size:0.9em; 
 		line-height:1.125em; 
 		height:60px;
-
+		@media(min-width:480px){
+			width:320px; 
+			font-size:1em; 
+		}
 		
 	}
 }
